Теоретическая база. Задачи - часть 1

--- a/03-theory-num-str-date/index.html
+++ b/03-theory-num-str-date/index.html
@@ -12,6 +12,8 @@
   <script src="01-numbers.js"></script>
   <script src="02-strings.js"></script>
   <script src="03-functions.js"></script>
+  <script src="04-date.js" defer></script>
+  <script src="tasks.js"></script>
 </head>
 
 <body class="bg-dark text-light">
