--- a/01-base/index.html
+++ b/01-base/index.html
@@ -10,8 +10,8 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
   <title>01. JS Base</title>
   <script src="app.js" defer></script>
-  <script src="theory.js" defer></script>
-  <script src="tasks.js" defer></script>
+  <!-- <script src="theory.js" defer></script> -->
+  <!-- <script src="tasks.js" defer></script> -->
 </head>
 
 <body class="bg-dark text-light">
